--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
           </div>
         </SPAN></div>
       </div>
+    </div>
+
+    <div class="rnt">
+      <div class="tailwind_text_logo">
+        <img class="tailwind_logo" src="tailwind.png">
+        <div class="tailwind_text">TAILWIND<SPAN class="tooltip-text" id="tail_right"><p class="exp">Experience</p><br>
+          <div class="star_div">
+          <img class="star" src="star.png">
+          <img class="star" src="star.png">
+          <img class="star" src="star.png">
+          <img class="star" src="star.png">
+          <img class="star" src="white star.png">
+          </div>
+        </SPAN></div>
+      </div>
+
       <div class="react_text_logo">
         <img class="react_logo" src="react.png">
         <div class="react_text">REACT<SPAN class="tooltip-text" id="react_right"><p class="exp">Experience</p><br>
@@ -97,19 +113,9 @@
         </SPAN></div>
       </div>
     </div>
+
     <div class="pj">
-      <div class="tailwind_text_logo">
-        <img class="tailwind_logo" src="tailwind.png">
-        <div class="tailwind_text">TAILWIND<SPAN class="tooltip-text" id="tail_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
+      
       <div class="python_text_logo">
         <img class="python_logo" src="python-language-logo.png">
         <div class="python_text">PYTHON<SPAN class="tooltip-text" id="py_right"><p class="exp">Experience</p><br>
@@ -159,3 +165,4 @@
   <script src="typewriter.js"></script>
 </body>
 </html>
+
