--- a/project.HTML
+++ b/project.HTML
@@ -26,8 +26,8 @@
         <div class="project_items">
             <img class="project_img1" src="Netflix-Logo png.png"> 
             <div class="project_item_text1">
-                <p class="project_name_text1">Netflix Clone</p>
-                <a href="Netflix/netflix.html" class="netflixbtn">Visit Project</a>
+                <p class="project_name_text1">FOODY Website</p>
+                <a href="Netflix/index.html" class="foodybtn">Visit Project</a>
             </div> 
         </div>
 
