--- a/project.HTML
+++ b/project.HTML
@@ -24,7 +24,7 @@
 
     <div class="project_row_one">
         <div class="project_items">
-            <img class="project_img1" src="Netflix-Logo png.png"> 
+            <img class="project_img1" src="FOODY.png"> 
             <div class="project_item_text1">
                 <p class="project_name_text1">FOODY Website</p>
                 <a href="Netflix/index.html" class="foodybtn">Visit Project</a>
