--- a/index.html
+++ b/index.html
@@ -1,167 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nazim's Portfolio</title>
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="icon" type="image/png" href="Firefly_3d_avatar_face_59846.png">
     <link rel="stylesheet" href="style.css">
-    <link href='https://fonts.googleapis.com/css?family=Baloo Bhai' rel='stylesheet'>
-</head>
-<body>
-  <div id="header">
-    <nav>
-        <p class="name">Mohammad Nazim Husain</p>
-        <div class="div-item-right">
-          <a href="Mohammad Nazim Husain's Resume.png"Download class="nav-items">Download Resume</a>
-          <a href="project.HTML" class="nav-items">Projects</a>
-          <a href="aboutport.html" class="nav-items">About me</a>
-          <a href="contactme.html" class="nav-items">Contact Me</a>
+    <link href='https://fonts.googleapis.com/css?family=Baloo Bhai'
+      rel='stylesheet'>
+  </head>
+  <body>
+    <div class="main">
+      <div id="header">
+        <nav>
+          <p class="name">Mohammad Nazim Husain</p>
+          <div class="div-item-right">
+            <a href="Mohammad Nazim Husain's Resume.png" Download
+              class="nav-items">Download Resume</a>
+            <a href="project.HTML" class="nav-items">Projects</a>
+            <a href="aboutport.html" class="nav-items">About me</a>
+            <a href="contactme.html" class="nav-items">Contact Me</a>
+          </div>
+        </nav>
+        <h1 class="white-board-name">Hello,I'm Nazim <br>And I'm a </h1>
+        <h1>
+          <a href class="typewrite" data-period="2000"
+            data-type='["Web Developer.", "UI/UX Designer.", "Java Expert.","Gamer." ]'>
+            <span class="wrap"></span>
+          </a>
+        </h1>
+      </div>
+
+      <section class="section1">
+        <div class="headingtech">
+          <h1 class="tech_heading">My</h1>
+          <h1 class="proficiency">Proficiencies</h1>
         </div>
-    </nav>
-    <h1 class="white-board-name">Hello,I'm Nazim <br>And I'm a </h1>
-    <h1>
-      <a href="" class="typewrite" data-period="2000" data-type='["Web Developer.", "UI/UX Designer.", "Java Expert.","Gamer." ]'>
-        <span class="wrap"></span>
-      </a>
-    </h1>
-  </div>
+        <div class="technologies">
+          <div class="htmlcssjs">
+            <div class="html_text_logo">
+              <img class="html_logo" src="html-logo.png">
+              <div class="html_text">HTML <span class="tooltip-text"
+                  id="html_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="rating.png">
+                  </div>
+                </span></div>
+            </div>
+            <div class="css_text_logo">
+              <img class="css_logo" src="css-logo.png">
+              <div class="css_text">CSS<span class="tooltip-text"
+                  id="css_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="rating.png">
+                  </div>
+                </span></div>
+            </div>
 
-  <section class="section1">
-    <div class="headingtech">
-      <h1 class="tech_heading">My</h1>
-      <h1 class="proficiency">Proficiencies</h1>
-    </div>
-  <div class="technologies">
-    <div class="htmlcssjs">
-      <div class="html_text_logo">
-        <img class="html_logo" src="html-logo.png">
-        <div class="html_text">HTML <SPAN class="tooltip-text" id="html_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="rating.png">
+            <div class="js_text_logo">
+              <img class="js_logo" src="javascript-logo.png">
+              <div class="js_text">JAVASCRIPT<span class="tooltip-text"
+                  id="js_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+          </div>
+
+          <div class="rnt">
+            <div class="tailwind_text_logo">
+              <img class="tailwind_logo" src="tailwind.png">
+              <div class="tailwind_text">TAILWIND<span class="tooltip-text"
+                  id="tail_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+
+            <div class="react_text_logo">
+              <img class="react_logo" src="react.png">
+              <div class="react_text">REACT<span class="tooltip-text"
+                  id="react_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+
+            <div class="node_text_logo">
+              <img class="node_logo" src="nodejs.png">
+              <div class="node_text">NODE JS<span class="tooltip-text"
+                  id="node_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+          </div>
+
+          <div class="pj">
+
+            <div class="python_text_logo">
+              <img class="python_logo" src="python-language-logo.png">
+              <div class="python_text">PYTHON<span class="tooltip-text"
+                  id="py_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+
+            <div class="java_text_logo">
+              <img class="java_logo" src="java.png">
+              <div class="java_text">JAVA<span class="tooltip-text"
+                  id="java_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="rating.png">
+                  </div>
+                </span></div>
+            </div>
+            <div class="FIGMA_text_logo">
+              <img class="FIGMA_logo" src="figma-logo.png">
+              <div class="figma_text">FIGMA<span class="tooltip-text"
+                  id="figma_right"><p class="exp">Experience</p><br>
+                  <div class="star_div">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="star.png">
+                    <img class="star" src="white star.png">
+                  </div>
+                </span></div>
+            </div>
+          </div>
         </div>
-        </SPAN></div>
-      </div>
-      <div class="css_text_logo">
-        <img class="css_logo" src="css-logo.png">
-        <div class="css_text">CSS<SPAN class="tooltip-text" id="css_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="rating.png">
-        </div>
-        </SPAN></div>
-      </div>
-  
-      <div class="js_text_logo">
-        <img class="js_logo" src="javascript-logo.png">
-        <div class="js_text">JAVASCRIPT<SPAN class="tooltip-text" id="js_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
+      </section>
     </div>
-
-    <div class="rnt">
-      <div class="tailwind_text_logo">
-        <img class="tailwind_logo" src="tailwind.png">
-        <div class="tailwind_text">TAILWIND<SPAN class="tooltip-text" id="tail_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
-
-      <div class="react_text_logo">
-        <img class="react_logo" src="react.png">
-        <div class="react_text">REACT<SPAN class="tooltip-text" id="react_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
-  
-      <div class="node_text_logo">
-        <img class="node_logo" src="nodejs.png">
-        <div class="node_text">NODE JS<SPAN class="tooltip-text" id="node_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
-    </div>
-
-    <div class="pj">
-      
-      <div class="python_text_logo">
-        <img class="python_logo" src="python-language-logo.png">
-        <div class="python_text">PYTHON<SPAN class="tooltip-text" id="py_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
-  
-      <div class="java_text_logo">
-        <img class="java_logo" src="java.png">
-        <div class="java_text">JAVA<SPAN class="tooltip-text" id="java_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="rating.png">
-          </div>
-        </SPAN></div>
-      </div>
-      <div class="FIGMA_text_logo">
-        <img class="FIGMA_logo" src="figma-logo.png">
-        <div class="figma_text">FIGMA<SPAN class="tooltip-text" id="figma_right"><p class="exp">Experience</p><br>
-          <div class="star_div">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="star.png">
-          <img class="star" src="white star.png">
-          </div>
-        </SPAN></div>
-      </div>
-    </div>
-  </div>
-  <!-- <hr>
-  <footer>
-    <p class="made_text">made by nazim!</p>
-    <img class="footer_img" src="Firefly_3d_avatar_face_59846.png">
-    <a href="#header" class="back_to_top">Back to top</a>
-  </footer> -->
-  </section>
-  <script src="typewriter.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+      integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+      integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="typewriter.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
+
