--- a/project.HTML
+++ b/project.HTML
@@ -70,10 +70,10 @@
             </div>
     
             <div class="project_items">
-                <img class="great" src="Outdoors/Great Outdoors.png"> 
+                <img class="great" src="Microsoft/Microsoft project/Great Outdoors.png"> 
                 <div class="project_item_text3">
                     <p class="project_name_text3">Great Outdoors</p>
-                    <a href="Outdoors/index.html" class="microsoftbtn">Visit Project</a>
+                    <a href="Microsoft/Microsoft project/outdoors.html" class="microsoftbtn">Visit Project</a>
                 </div> 
             </div>
         </div>
