--- a/Microsoft/Microsoft project/outdoors.html
+++ b/Microsoft/Microsoft project/outdoors.html
@@ -18,7 +18,7 @@
                 <h3 class="nav_text">SEARCH</h3>
             </nav>
             <video autoplay loop muted
-                src="compressed_video"></video>
+                src="compressed_video.mp4"></video>
             <h1 class="hero_head">The Great Outdoors <p class="wonder">Wonder
                     often.Wonder always</p></h1>
 
